# payload-transport

./: CMakeLists.txt  README.md  package.xml
config/: controller_params.yaml  params.yaml
include/: common.h  constants.h  data_structures.h  utils.h
include/payload_transport/: DiscreteTimeIntegrator.h  MavrosManager.h  MotorModel.h  MultirotorPayloadDynamics.h  PathFollowingController.h  Polynomial.h  WaypointManager.h
include/payload_transport_controller/: controller_ros_client.h  payload_transport_controller.h  thrust_tracking_controller.h
include/payload_transport_controller/internal/: geo_functions.h
launch/: autotest.launch  mission.launch  payload_transport_main.launch
src/: payload_transport_controller_node.cpp  payload_transport_node.cpp
src/payload_transport_controller/: controller_ros_client.cpp  payload_transport_controller.cpp  thrust_tracking_controller.cpp
src/payload_transport_controller/internal/: geo_functions.cpp
test/: test_payload_transport.cpp
test/include/: px4_command_regression.h
